Disabled zoom on mobile and added fix for audio on iOS

--- a/ChampagneBubbleJam/style.css
+++ b/ChampagneBubbleJam/style.css
@@ -17,6 +17,13 @@ body {
     user-select: none;
 }
 
+amp-audio {
+    [class*="amphtml-fill-content"] {
+        display: none;
+        width: 100%;
+    }
+}
+
 .input-container {
     margin-bottom: 20px;
     left: 0;
